# Harneloop

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish-to-pypi.yml
docs/: agent-onboarding.md  demo-first-test.md  development.md  environment-onboarding.md  framework-process-compact.md  framework-process.md  product-principles.md
docs/architecture/: concurrency.md  core-lifecycle.md  naming.md  runtime-layers.md
docs/diagrams/: framework-process-compact.mmd
docs/marketing/: first-user-launch-copy.md
docs/plans/: 2026-06-25-agent-attempt-plans.md  2026-06-25-core-mvp.md  2026-06-25-evidence-gated-promotion.md  2026-06-25-export-adapters.md  2026-06-25-first-demo-readiness.md  2026-06-25-live-testing-slice.md  2026-06-25-target-environment-onboarding.md  2026-06-26-human-cli.md  2026-06-27-capability-gaps.md  2026-06-27-operational-map.md  2026-07-10-case-study-proof-and-launch-copy.md  2026-07-10-compact-lifecycle-visual.md  2026-07-10-harneloop-rename.md  2026-07-10-lifecycle-integrity-and-process-visual.md  2026-07-10-readme-information-architecture-design.md  2026-07-10-research-rationale-and-alpha-release.md  2026-07-13-adaptive-intake-and-loop-closure-design.md  2026-07-13-adaptive-intake-and-loop-closure.md  2026-07-13-parallel-candidates-design.md  2026-07-13-parallel-candidates.md
docs/releases/: v0.0.1.md  v0.0.2.md
schemas/: artifact-manifest.schema.json  attempt-plan.schema.json  candidate-evidence.schema.json  candidate-record.schema.json  run-record.schema.json
skills/harneloop/: SKILL.md
src/evorig/: __init__.py  adapters.py  attempts.py  candidate.py  cli.py  diagnostics.py  environment.py  errors.py  evidence.py  interactive.py  onboarding.py  operational_map.py  packaging.py  paths.py  preferences.py  runs.py  setup_flow.py  state.py  target.py  templates.py  unit.py  validation.py  versioning.py  yamlio.py
src/harneloop/: __init__.py  adapters.py  attempts.py  candidate.py  cli.py  diagnostics.py  environment.py  errors.py  evidence.py  intake.py  interactive.py  locking.py  onboarding.py  operational_map.py  packaging.py  paths.py  preferences.py  runs.py  setup_flow.py  (+6 more)
tests/: test_concurrency.py  test_core_lifecycle.py  test_repo_structure.py  test_user_cli_support.py
