[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "evorig"
version = "0.0.1"
description = "Protocol-first framework for self-evolving agent harness units."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML"]

[project.scripts]
evorig = "evorig.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
