[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "evorig"
version = "0.0.1"
description = "Protocol-first framework for self-evolving agent harness units."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML", "rich"]
authors = [{ name = "Kristofer Jussmann" }]
keywords = ["agents", "harness", "artifacts", "evaluation", "automation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
evorig = "evorig.cli:main"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["evorig"]

[tool.coverage.report]
show_missing = true
skip_covered = true
