[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "harneloop"
version = "0.0.1"
description = "Artifact-aware framework for building self-evolving AI agent harnesses."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["PyYAML", "rich"]
authors = [{ name = "Kristofer Jussmann" }]
keywords = ["ai-agents", "agent-harness", "artifact-evaluation", "llm", "self-improving-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
harneloop = "harneloop.cli:main"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["harneloop"]

[tool.coverage.report]
show_missing = true
skip_covered = true
